Multiselect with dom pdf and phpoffice

--- a/public/i18n/site-en.json
+++ b/public/i18n/site-en.json
@@ -13,6 +13,7 @@
       "DASHBOARD": "Dashboard",
       "WIDGETS": "Widgets",
       "DOCUMENTATION": "Documentation",
+      "MULTISELECT": "Multiselect",
       "element": {
         "ELEMENTS": "Elements",
         "BUTTON": "Button",
